# cormorant

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
conv/: CMakeLists.txt
conv/include/: Config.h.in  ConvKernel.h
conv/kernel/: ConvKernel.cpp
conv/test/: TestConvSim.cpp
doc/: CONV_KERNEL.md  INFERENCE_SCHEDULER.md  POOLING_KERNEL.md  SIMULATION_ISSUES.md
dts/kv260/: cormorant.dts
hw/test_data/conv_test_data/: manifest.txt  test_00_b.hex  test_00_w.hex  test_00_x.hex  test_00_y.hex  test_01_b.hex  test_01_w.hex  test_01_x.hex  test_01_y.hex  test_02_b.hex  test_02_w.hex  test_02_x.hex  test_02_y.hex  test_03_w.hex  test_03_x.hex  test_03_y.hex  test_04_w.hex  test_04_x.hex  test_04_y.hex  test_05_b.hex  test_05_w.hex  test_05_x.hex  test_05_y.hex  test_06_w.hex  test_06_x.hex  test_06_y.hex  test_07_b.hex  test_07_w.hex  test_07_x.hex  test_07_y.hex  test_08_b.hex  test_08_w.hex  test_08_x.hex  test_08_y.hex  test_09_b.hex  test_09_w.hex  test_09_x.hex  test_09_y.hex  test_10_b.hex  test_10_w.hex  (+76 more)
include/: VectorOP.h
inference-scheduler/: CLAUDE.md  bitstream_config_kv260.json.example  inference_scheduler.py  perf_config.json.example  remote_config.json.example  requirements.txt  run_remote_perf.py  run_remote_tests.py  upload_bitstream.py
inference-scheduler/bench_src/: CMakeLists.txt  bench_conv.c  bench_matmul.c  bench_pool.c  bench_vectorop.c  inference.h  inference_buf.c
inference-scheduler/doc/: ARCHITECTURE.md  BUFFER_REUSE.md  INFERENCE_SCHEDULER.md  REMOTE_TESTING.md
inference-scheduler/src/: codegen.py  dtype.py  graph.py  kernels.py  layout.py  nodes.py  tensor.py
inference-scheduler/src/bitstream/: __init__.py  board.py  convert.py  hwh.py  loader.py  xclbin.py
inference-scheduler/src/codegen/: __init__.py  _banners.py  _buf_impl.py  _cmake.py  _core.py  _header.py  _simulate.py  _source.py  _test.py
inference-scheduler/src/remote/: __init__.py  checks.py  colors.py  config.py  session.py
inference-scheduler/test/: conftest.py  gen_all_models.py  gen_conv_models.py  gen_matmul_models.py  gen_mixed_all_kernels_models.py  gen_mixed_kernel_models.py  gen_pool_models.py  gen_reshape_gemm_models.py  gen_test_models.py  helpers.py  test_2d_models.py  test_broadcast.py  test_broadcast_3d.py  test_broadcast_chain.py  test_broadcast_chain_bias.py  test_broadcast_tapped.py  test_buf_impl.py  test_chunk_one.py  test_cli.py  test_clip_opset10.py  test_cmake.py  test_conv.py  test_graph.py  test_header.py  test_large_tensor.py  test_large_weight_dat.py  test_live_intervals.py  test_mixed_all_kernels.py  test_mixed_kernel.py  test_pool.py  test_pool_alloc.py  test_reshape_gemm.py  test_residual.py  test_saturation.py  test_scheduler.py  test_setup_script.py  test_source.py  test_subdiv.py  test_tensor.py  test_test_gen.py  (+2 more)
kernel/: VectorOP.cpp
kernels/conv/: CMakeLists.txt
kernels/conv/include/: ConvKernel.h
kernels/conv/kernel/: ConvKernel.cpp
kernels/conv/scripts/: Synthesis.tcl.in
kernels/conv/test/: TestConvSim.cpp
kernels/matmul/: CMakeLists.txt
kernels/matmul/include/: Config.h.in  MatmulKernel.h
kernels/matmul/kernel/: MatmulKernel.cpp
kernels/matmul/scripts/: Synthesis.tcl.in
kernels/pool/: CMakeLists.txt
kernels/pool/include/: Config.h.in  PoolingKernel.h
kernels/pool/scripts/: Synthesis.tcl.in
kernels/vectorop/: CMakeLists.txt
kernels/vectorop/include/: Config.h.in  VectorOP.h
kernels/vectorop/kernel/: VectorOP.cpp
kernels/vectorop/scripts/: Synthesis.tcl.in
kernels/vectorop/test/: TestSimulation.cpp
matmul/: CMakeLists.txt
matmul/test/: TestMatmulBlas.cpp  TestMatmulSim.cpp
pool/: CMakeLists.txt
pool/kernel/: PoolingKernel.cpp
pool/test/: TestPoolingSim.cpp
scripts/: test_pynq.py
test/: TestSimulation.cpp
